# scenex

./: .gitignore  .impeccable.md  CLAUDE.md  idea.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: design-proposals-white.md  white-mode-mockups.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: PROMPT_GUIDE.md  batch_panels.md  copilot.md  copilot_scenario.md  copilot_storyboard.md  description_enhance.md  panel_compare.md  regenerate_panel.md  scenario_compare.md  scenario_condense.md  scenario_expand.md  scenario_generate.md  scenario_polish.md  scenario_to_script.md  scenario_to_storyboard.md  script_lines.md  svg_panel.md
src-tauri/prompts/storyboard/: SKILL.md
src-tauri/prompts/storyboard/references/: duration.md  script-format.md  shot-types.md  svg-specs.md
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  settings.rs
src-tauri/src/commands/: checkpoints.rs  claude.rs  copilot.rs  export.rs  file_io.rs  mod.rs  prompts.rs  result.rs  scenario.rs  versioning.rs  workspace.rs
src/ai/: index.ts  provider-factory.ts  types.ts
src/components/: AITaskStatus.tsx
src/constants/: index.ts
src/hooks/: mod.ts  useClaude.ts  useCopilot.ts  useExport.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useProject.ts  useWorkspace.ts
src/stores/: aiChatStore.ts  aiStore.ts  copilotStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: global.css  theme.ts
src/test/: setup.ts
(+90 files in other folders)
